[package]
name = "hookhub"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
actix-web = "4.9.0"
actix-web-httpauth = "0.8.2"
actix-ws = "0.3.0"
anyhow = { version = "1.0.89", features = ["backtrace"] }
async-tungstenite = { version = "0.28.0", features = ["tokio-rustls-webpki-roots", "tokio-runtime"] }
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["derive", "env"] }
env_logger = "0.11.5"
futures = "0.3.31"
futures-util = "0.3.31"
http = "1.1.0"
lazy_static = "1.5.0"
log = "0.4.22"
reqwest = { version = "0.12.8", features = ["rustls-tls"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
url = "2.5.2"

[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]